--- a/Libraries/Style/palette.css
+++ b/Libraries/Style/palette.css
@@ -1,4 +1,13 @@
 :root {
-    --primary: #fff132;
-    --secundary: #a11e7a;
+    --primary: #fea06d;
+    --primary-light: #ffb79d;
+    --primary-dark: #c57d51;
+
+    --secundary: #1a1a1a;
+    --secundary-light: #292929;
+    --secundary-dark: #000000;
+
+    --grey: #d7d7d7;
+    --grey-light: #f0f0f0;
+    --grey-dark: #c0c0c0;
 }
