--- a/Libraries/Style/style.css
+++ b/Libraries/Style/style.css
@@ -1,1 +1,28 @@
 @import url(form-style.css);
+
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    min-width: 100%;
+    min-height: 100%;
+}
+
+header {
+    background-color: rgba(255, 0, 0, 0.3);
+    height: auto;
+    width: 100%;
+    position: relative;
+    top: 0;
+}
+
+footer {
+    background-color: rgba(0, 0, 255, 0.3);
+    height: auto;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+}
