--- a/Libraries/Style/palette.css
+++ b/Libraries/Style/palette.css
@@ -1,9 +1,9 @@
 :root {
-    --primary: #fea06d;
-    --primary-light: #ffb79d;
-    --primary-dark: #c57d51;
+    --primary: #F07900;
+    --primary-light: #F8A145;
+    --primary-dark: #D35100;
 
-    --secundary: #1a1a1a;
+    --secundary: #151515;
     --secundary-light: #292929;
     --secundary-dark: #000000;
 
