--- a/Libraries/Style/icons.css
+++ b/Libraries/Style/icons.css
@@ -1,9 +1,15 @@
+@import url(./palette.css);
+
 .icon-btn {
     width: 40px;
     height: 40px;
     border: 0;
-    border-radius: 10px;
+    border-radius: 40px;
     background-size: 100%;
+    background-color: rgba(255, 255, 255, 0.6);
+    background-size: 60%;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 #prevBtn {
