il faut utiliser la font 'Prompt' pour tous les textes

--- a/Libraries/Style/icons.css
+++ b/Libraries/Style/icons.css
@@ -10,6 +10,13 @@
     background-size: 60%;
     background-repeat: no-repeat;
     background-position: center;
+    transition-property: background-color;
+    transition-duration: 0.5s;
+}
+
+.icon-btn:hover {
+    cursor: pointer;
+    background-color: var(--primary);
 }
 
 #prevBtn {
