--- a/Libraries/Style/fonts.css
+++ b/Libraries/Style/fonts.css
@@ -2,3 +2,8 @@
     font-family: "Noto Sans";
     src: url("./Fonts/Noto Sans/NotoSans-Regular.ttf");
 }
+
+@font-face {
+    font-family: Prompt;
+    src: url("./Fonts/Prompt/Prompt-Regular.ttf");
+}
