--- a/Libraries/Style/form-style.css
+++ b/Libraries/Style/form-style.css
@@ -9,7 +9,9 @@
     border-top-width: 2px;
     box-shadow: 0 10px 0px var(--primary);
     border-radius: 10px;
-    font-family: "Noto Sans";
+    /* font-family: "Noto Sans"; */
+    font-family: Prompt;
+    letter-spacing: 1px;
 }
 
 .info-form legend {
@@ -51,7 +53,6 @@
     width: 15px;
     margin: 0 2px;
     background-color: var(--primary-dark);
-    border: none;
     border-radius: 50%;
     display: inline-block;
     opacity: 0.5;
@@ -67,4 +68,8 @@
 
 .connexion-suggestion {
     text-align: center;
+}
+
+.required-symbol {
+    color: var(--primary-dark);
 }
