--- a/Libraries/Style/CSS/Mobile/form-style.css
+++ b/Libraries/Style/CSS/Mobile/form-style.css
@@ -1,5 +1,5 @@
-@import url(palette.css);
-@import url(fonts.css);
+@import url(../palette.css);
+@import url(../fonts.css);
 
 .info-form {
     margin: 5%;
