--- a/Libraries/Style/CSS/Mobile/style.css
+++ b/Libraries/Style/CSS/Mobile/style.css
@@ -1,6 +1,6 @@
 @import url(form-style.css);
-@import url(icons.css);
-@import url(palette.css);
+@import url(../icons.css);
+@import url(../palette.css);
 
 * {
     margin: 0;
@@ -9,15 +9,18 @@
 
 body {
     min-width: 100%;
+    height: 1200px;
     min-height: 100%;
     background-color: var(--bg-color);
 }
 
 header {
-    background-color: rgba(255, 0, 0, 0.3);
-    height: auto;
+    background-color: var(--primary);
+    border-bottom-left-radius: 70%;
+    border-bottom-right-radius: 70%;
+    padding: 0;
     width: 100%;
-    position: relative;
+    position: sticky;
     top: 0;
 }
 
@@ -36,4 +39,11 @@ footer {
 
 .info-small {
     font-size: 11px;
+}
+
+.logo {
+    width: 40%;
+    margin: auto;
+    display: block;
+    filter: drop-shadow(0 0 5px white);
 }
