--- a/Libraries/Style/CSS/Mobile/style.css
+++ b/Libraries/Style/CSS/Mobile/style.css
@@ -8,9 +8,9 @@
 }
 
 body {
-    min-width: 100%;
+    min-width: 100vw;
     height: 1200px;
-    min-height: 100%;
+    min-height: 100vh;
     background-color: var(--bg-color);
 }
 
@@ -18,18 +18,61 @@ header {
     background-color: var(--primary);
     border-bottom-left-radius: 70%;
     border-bottom-right-radius: 70%;
-    padding: 0;
+    /* padding: 0; */
     width: 100%;
     position: sticky;
     top: 0;
 }
 
 footer {
-    background-color: rgba(0, 0, 255, 0.3);
-    height: auto;
+    background-color: var(--primary);
+    border-top-left-radius: 70%;
+    border-top-right-radius: 70%;
+    /* padding: 0; */
     width: 100%;
-    position: absolute;
+    position: sticky;
     bottom: 0;
+}
+
+.topnav {
+    overflow: hidden;
+    background-color: #333;
+    position: relative;
+}
+
+/* Hide the links inside the navigation menu (except for logo/home) */
+.topnav #myLinks {
+    display: none;
+}
+
+/* Style navigation menu links */
+.topnav a {
+    color: white;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    display: block;
+}
+
+/* Style the hamburger menu */
+.topnav .btn-icon {
+    background: black;
+    display: block;
+    position: absolute;
+    right: 10px;
+    bottom: 10px;
+}
+
+/* Add a grey background color on mouse-over */
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+/* Style the active link (or home/logo) */
+.active {
+    background-color: #04AA6D;
+    color: white;
 }
 
 .sub-text {
