--- a/Libraries/Style/CSS/icons.css
+++ b/Libraries/Style/CSS/icons.css
@@ -41,3 +41,11 @@ button#register {
     background-color: var(--valid-color);
     box-shadow: 0 0 15px var(--primary-dark);
 }
+
+#burger-btn {
+    background-image: url(../Icons/menu.png);
+    position: absolute;
+    display: block;
+    bottom: 10px;
+    right: 10px;
+}
