--- a/Libraries/Style/CSS/Mobile/style.css
+++ b/Libraries/Style/CSS/Mobile/style.css
@@ -30,13 +30,14 @@ footer {
     border-top-right-radius: 70%;
     /* padding: 0; */
     width: 100%;
-    position: sticky;
+    height: fit-content;
+    position: fixed;
     bottom: 0;
 }
 
 .topnav {
-    overflow: hidden;
-    background-color: #333;
+    /* overflow: hidden; */
+    /* background-color: #333; */
     position: relative;
 }
 
@@ -55,25 +56,8 @@ footer {
 }
 
 /* Style the hamburger menu */
-.topnav .btn-icon {
-    background: black;
-    display: block;
-    position: absolute;
-    right: 10px;
-    bottom: 10px;
-}
-
-/* Add a grey background color on mouse-over */
-.topnav a:hover {
-    background-color: #ddd;
-    color: black;
-}
-
-/* Style the active link (or home/logo) */
-.active {
-    background-color: #04AA6D;
-    color: white;
-}
+/* .topnav .btn-icon {
+} */
 
 .sub-text {
     color: rgba(0, 0, 0, 0.6);
