--- a/Libraries/Style/CSS/Mobile/style.css
+++ b/Libraries/Style/CSS/Mobile/style.css
@@ -19,7 +19,7 @@ header {
     border-bottom-left-radius: 70%;
     border-bottom-right-radius: 70%;
     /* padding: 0; */
-    width: 100%;
+    width: 100vw;
     position: sticky;
     top: 0;
 }
@@ -28,8 +28,7 @@ footer {
     background-color: var(--primary);
     border-top-left-radius: 70%;
     border-top-right-radius: 70%;
-    /* padding: 0; */
-    width: 100%;
+    width: 100vw;
     height: fit-content;
     position: fixed;
     bottom: 0;
@@ -42,8 +41,16 @@ footer {
 }
 
 /* Hide the links inside the navigation menu (except for logo/home) */
-.topnav #myLinks {
-    display: none;
+#myLinks {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    text-align: center;
+}
+
+#myLinks * {
+    width: 25%;
+    outline: 1px solid green;
 }
 
 /* Style navigation menu links */
@@ -56,8 +63,11 @@ footer {
 }
 
 /* Style the hamburger menu */
-/* .topnav .btn-icon {
-} */
+.topnav #burger-btn {
+    margin: 5px auto;
+    display: flex;
+    justify-self: center;
+}
 
 .sub-text {
     color: rgba(0, 0, 0, 0.6);
