--- a/Libraries/Style/CSS/palette.css
+++ b/Libraries/Style/CSS/palette.css
@@ -12,7 +12,7 @@
     --grey-light: #f0f0f0;
     --grey-dark: #c0c0c0;
 
-    --bg-color: #ffd7ac;
+    --bg-color: #eeeeee;
 
     --valid-color: rgb(69, 243, 69);
     --alert-color: yellow;
