--- a/Libraries/Style/CSS/Mobile/style.css
+++ b/Libraries/Style/CSS/Mobile/style.css
@@ -25,7 +25,7 @@ header {
 }
 
 footer {
-    background-color: var(--primary);
+    /* background-color: var(--primary); */
     border-top-left-radius: 70%;
     border-top-right-radius: 70%;
     width: 100vw;
@@ -45,12 +45,26 @@ footer {
     display: flex;
     flex-direction: row;
     align-items: flex-end;
+    justify-content: space-evenly;
     text-align: center;
+    padding: 0;
+    margin: 10px 10px;
+    background-color: var(--primary);
+    border-radius: 100px;
 }
 
-#myLinks * {
-    width: 25%;
-    outline: 1px solid green;
+#myLinks a {
+    width: fit-content;
+    height: auto;
+    padding: 0;
+    margin: 0;
+}
+
+#myLinks img {
+    width: 35%;
+    padding: 0;
+    margin: 0;
+    filter: drop-shadow(0 0 5px white);
 }
 
 /* Style navigation menu links */
@@ -64,7 +78,7 @@ footer {
 
 /* Style the hamburger menu */
 .topnav #burger-btn {
-    margin: 5px auto;
+    margin: 3px auto;
     display: flex;
     justify-self: center;
 }
