--- a/Libraries/Style/CSS/Mobile/style.css
+++ b/Libraries/Style/CSS/Mobile/style.css
@@ -1,6 +1,12 @@
 @import url(form-style.css);
+@import url(slider.css);
 @import url(../icons.css);
 @import url(../palette.css);
+
+@font-face {
+    font-family: Prompt;
+    src: url(../../Fonts/Prompt/Prompt-Regular.ttf);
+}
 
 * {
     margin: 0;
@@ -97,4 +103,11 @@ footer {
     margin: auto;
     display: block;
     filter: drop-shadow(0 0 5px white);
+}
+
+.presentation {
+    background-color: var(--primary-light);
+    padding: 20px;
+    margin: 20px 0;
+    font-family: "Prompt";
 }
