--- a/Libraries/Style/CSS/fonts.css
+++ b/Libraries/Style/CSS/fonts.css
@@ -4,6 +4,6 @@
 }
 
 @font-face {
-    font-family: Prompt;
-    src: url("./Fonts/Prompt/Prompt-Regular.ttf");
+    font-family: "Prompt";
+    src: url(./Fonts/Prompt/Prompt-Regular.ttf) format('ttf');
 }
