--- a/Libraries/Style/CSS/footer.css
+++ b/Libraries/Style/CSS/footer.css
@@ -1,35 +1,3 @@
-@import url(form-style.css);
-@import url(slider.css);
-@import url(../icons.css);
-@import url(../palette.css);
-
-@font-face {
-    font-family: Prompt;
-    src: url(../../Fonts/Prompt/Prompt-Regular.ttf);
-}
-
-* {
-    margin: 0;
-    padding: 0;
-}
-
-body {
-    min-width: 100vw;
-    height: 1200px;
-    min-height: 100vh;
-    background-color: var(--bg-color);
-}
-
-header {
-    background-color: var(--primary);
-    border-bottom-left-radius: 70%;
-    border-bottom-right-radius: 70%;
-    /* padding: 0; */
-    width: 100vw;
-    position: sticky;
-    top: 0;
-}
-
 footer {
     /* background-color: var(--primary); */
     border-top-left-radius: 70%;
@@ -89,25 +57,8 @@ footer {
     justify-self: center;
 }
 
-.sub-text {
-    color: rgba(0, 0, 0, 0.6);
-    text-align: center;
-}
-
-.info-small {
-    font-size: 11px;
-}
-
-.logo {
-    width: 40%;
-    margin: auto;
-    display: block;
-    filter: drop-shadow(0 0 5px white);
-}
-
-.presentation {
-    background-color: var(--primary-light);
-    padding: 20px;
-    margin: 20px 0;
-    font-family: "Prompt";
+#burger-btn {
+    background-image: url(../Icons/menu.png);
+    background-color: var(--primary);
+    transition: transform 1s;
 }
