--- a/Libraries/Style/CSS/index.css
+++ b/Libraries/Style/CSS/index.css
@@ -1,3 +1,12 @@
+.presentation {
+    background-color: var(--primary-light);
+    padding: 20px;
+    margin: 20px 0;
+    font-family: "Prompt";
+}
+
+/* === SLIDER === */
+
 .slider {
     margin: 0 auto;
     width: 90vw;
