--- a/Libraries/Style/CSS/header.css
+++ b/Libraries/Style/CSS/header.css
@@ -5,8 +5,6 @@
 
 body {
     min-width: 100vw;
-    height: 1200px;
-    min-height: 100vh;
     background-color: var(--bg-color);
 }
 
@@ -20,8 +18,8 @@ header {
     top: 0;
 }
 
-.logo {
-    width: 40%;
+header .logo {
+    width: 50vw;
     margin: auto;
     display: block;
     filter: drop-shadow(0 0 5px white);
