--- a/Libraries/Style/CSS/gestionUtilisateurs.css
+++ b/Libraries/Style/CSS/gestionUtilisateurs.css
@@ -4,11 +4,13 @@
 #gestionUser .heading {
     font-family: Prompt;
     text-align: center;
+    width: 80%;
+    margin: 20px auto;
 }
 
 #gestionUser table {
-    outline: 1px solid green;
     max-width: 100vw;
+    margin-bottom: 60px;
 }
 
 #gestionUser thead {
@@ -37,34 +39,36 @@
     margin: 5px;
     padding: 5px;
     overflow: hidden;
-    width: 80%;
-    outline: 1px solid blue;
 }
 
 #gestionUser tbody tr td {
     margin: 5px;
+    line-height: 30px;
 }
 
 .id-row {
     display: block;
     width: fit-content;
-    outline: 1px solid green;
 }
 
 .link-row {
-    padding: 5px 10px;
-    position: absolute;
+    width: 100%;
     z-index: 0;
     align-items: center;
     align-self: center;
-    right: 0;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
-.link-row button {
+.link-row a {
     padding: 0 10px;
+    text-decoration: none;
+    color: black;
+    border-radius: 5px;
+    border-width: 0;
+    background-color: var(--primary-light);
 }
 
 .id-row::before {
