--- a/Libraries/Style/CSS/gestionUtilisateurs.css
+++ b/Libraries/Style/CSS/gestionUtilisateurs.css
@@ -20,7 +20,7 @@
     width: fit-content;
     padding-left: 40px;
     display: block;
-    margin: 20px;
+    margin: 20px auto;
     text-decoration: none;
     color: black;
     border-radius: 5px;
