--- a/Libraries/Style/CSS/inscription.css
+++ b/Libraries/Style/CSS/inscription.css
@@ -131,3 +131,8 @@
     font-style: italic;
     filter: drop-shadow(0 0 1px rgba(0,0,0,0.5));
 }
+
+#inscription .field-alert {
+    font-style: italic;
+    color: red;
+}
