--- a/Libraries/Style/CSS/footer.css
+++ b/Libraries/Style/CSS/footer.css
@@ -53,3 +53,14 @@ footer {
     background-size: 50%;
     transition: transform 1s;
 }
+
+#left-links button[name="deconnex"]{
+    width: 50px;
+    height: 50px;
+    background-image: url(../Icons/logout.png);
+    background-size: 30px;
+    background-repeat: no-repeat;
+    background-position: center;
+    border: none;
+    background-color: transparent;
+}
