--- a/Libraries/Style/CSS/index.css
+++ b/Libraries/Style/CSS/index.css
@@ -43,7 +43,7 @@
     position: absolute;
     color: white;
     padding: 0 1rem;
-    background-color: rgba(0,0,0,0.3);
+    background-color: rgba(0,0,0,0.8);
     background-position: center;
     background-repeat: no-repeat;
     background-size: 60%;
@@ -51,7 +51,7 @@
     top: 50%;
     z-index: 2;
     border-radius: 40px;
-    border: none;
+    border: 2px solid white;
 }
 
 .slider-btn#prev {
@@ -69,4 +69,11 @@
 #img-cont {
     margin:0;
     padding:0;
+}
+
+iframe {
+    width: 100%;
+    height: 300px;
+    border: 0;
+    border-radius: 10px;
 }
