--- a/Libraries/Style/CSS/index.css
+++ b/Libraries/Style/CSS/index.css
@@ -77,3 +77,36 @@ iframe {
     border: 0;
     border-radius: 10px;
 }
+
+.presentation ul {
+    list-style: none;
+    font-size: 20px;
+}
+
+.presentation ul li {
+    margin-left: 10px; 
+    background-size: 20px;
+    background-position: left center;
+    padding-left: 25px;
+    background-repeat: no-repeat;
+}
+
+li#phone-icon {
+    background-image: url(../Icons/phone.png);
+}
+
+li#mail-icon {
+    background-image: url(../Icons/mail.png);
+}
+
+li#fb-icon {
+    background-image: url(../Icons/fb.png);
+}
+
+li#ig-icon {
+    background-image: url(../Icons/ig.png);
+}
+
+li#li-icon {
+    background-image: url(../Icons/li.png);
+}
