--- a/Libraries/Style/CSS/index.css
+++ b/Libraries/Style/CSS/index.css
@@ -85,9 +85,9 @@ iframe {
 
 .presentation ul li {
     margin-left: 10px; 
-    background-size: 20px;
+    background-size: 5%;
     background-position: left center;
-    padding-left: 25px;
+    padding-left: 7%;
     background-repeat: no-repeat;
 }
 
