--- a/Libraries/Style/CSS/modifierEvent.css
+++ b/Libraries/Style/CSS/modifierEvent.css
@@ -5,11 +5,12 @@ body {
     max-width: 100%;
 }
 
-#lireEvent {
+#modifierEvent {
     margin-top: 20px;
+    margin-bottom: 70px;
 }
 
-#lireEvent #event-card {
+#event-card {
     margin: 5%;
     padding: 5%;
     background-color: var(--primary-light);
@@ -24,18 +25,18 @@ body {
     flex-direction: column;
 }
 
-#lireEvent #event-card h3, #lireEvent #event-card p {
+#event-card h3, #event-card p {
     vertical-align: baseline;
 }
 
-#lireEvent #event-card #title {
+#event-card #title {
     text-align: center;
     margin-bottom: 20px;
     padding-bottom: 20px;
     border-bottom: 2px solid var(--primary);
 }
 
-#lireEvent #back {
+#modifierEvent #back {
     background-image: url(../Icons/left-arrow.png);
     background-repeat: no-repeat;
     background-size: 15%;
@@ -53,20 +54,45 @@ body {
     background-color: var(--primary-light);
 }
 
-#lireEvent #event-img {
+#modifierEvent #event-img {
     width: 100%;
     object-fit: cover;
     margin-bottom: 20px;
 }
 
-#lireEvent #event-card .field {
+#event-card span {
+    margin: 5px auto;
+}
+
+#modifierEvent #event-card .field input,
+#modifierEvent #event-card .field select,
+#modifierEvent #event-card .field textarea {
+    padding: 2px;
+    border: none;
+    border-radius: 5px;
+    background-color: rgba(255,255,255,0.3);
+}
+
+#modifierEvent #event-img {
+    width: 100%;
+    object-fit: cover;
+    margin-bottom: 20px;
+}
+
+#modifierEvent #event-card .field {
     display: flex;
     flex-direction: column;
     margin: 5px auto;
     width: 100%;
 }
 
-#lireEvent #event-card .field label {
+#modifierEvent #event-card .field label {
     align-self: flex-start;
 }
 
+button[name="update_event"] {
+    background-color: white;
+    padding: 10px;
+    border: none;
+    border-radius: 15px;
+}
