--- a/Libraries/Style/CSS/header.css
+++ b/Libraries/Style/CSS/header.css
@@ -17,10 +17,11 @@ header {
     position: sticky;
     top: 0;
     z-index: 10;
+    height: 10vh;
 }
 
 header .logo {
-    width: 50vw;
+    height: 10vh;
     margin: auto;
     display: block;
     filter: drop-shadow(0 0 5px white);
