--- a/Libraries/Style/CSS/index.css
+++ b/Libraries/Style/CSS/index.css
@@ -69,10 +69,15 @@ li#li-icon {
 .presentation {
     background-color: var(--primary-light);
     box-sizing: border-box;
-    width: 100%;
+    width: 80%;
     padding: 30px;
-    margin: 20px 0;
+    margin: 20px auto;
     font-family: "Prompt";
+}
+
+.presentation p {
+    width: 80%;
+    margin: auto;
 }
 
 .slider-btn {
@@ -99,18 +104,29 @@ iframe {
     border-radius: 10px;
 }
 
+.iframe-cont {
+    width: 100%;
+    margin: auto;
+    text-align: center;
+}
+
 .presentation ul {
     list-style: none;
     font-size: 20px;
 }
 
 .presentation ul li {
+    width: fit-content;
+    margin: auto;
     text-align: center;
-    margin-left: 10px; 
     background-size: 20px;
     background-position: left center;
     padding-left: 30px;
     background-repeat: no-repeat;
+}
+
+.presentation.contact-us h1 {
+    text-align: center;
 }
 
 .presentation.contact-us h1 a {
@@ -136,7 +152,17 @@ iframe {
     height: fit-content;
 }
 
+
+
 @media screen and (max-width: 1000px) {
+
+    .presentation {
+        width: 100%;
+    }
+    
+    .presentation .lines-around *:not(h1) {
+        display: none;
+    }
 
     .slider {
         margin: 0 auto;
@@ -175,8 +201,7 @@ iframe {
         text-align: center;
     }
 
-    .presentation ul {
-        /* outline: 1px solid green; */
+    /* .presentation ul {
         width: fit-content;
         margin: auto;
         list-style: none;
@@ -195,7 +220,6 @@ iframe {
 
     .presentation.contact-us {
         width: 100%;
-        /* padding: 5% 10%; */
         text-align: center;
         margin: auto;
     }
@@ -207,7 +231,6 @@ iframe {
     }
     
     .presentation.contact-us li {
-        /* outline: 1px solid green; */
         height: fit-content;
-    }
+    } */
 }
