--- a/Libraries/Style/CSS/connexion.css
+++ b/Libraries/Style/CSS/connexion.css
@@ -2,9 +2,13 @@
 /* import Prompt font */
 @import url('https://fonts.googleapis.com/css2?family=Prompt&display=swap');
 
+
 #connexion .info-form {
-    margin: 5%;
-    padding: 5%;
+    width: fit-content;
+    display: flex;
+    flex-direction: column;
+    margin: 5% auto;
+    padding: 20px;
     background-color: var(--primary-light);
     border: 3px solid var(--primary);
     border-top-width: 2px;
@@ -62,39 +66,53 @@
     font-size: 11px;
 }
 
-#connexion #btn-cont {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 90%;
-    margin: auto;
-}
-
-#connexion .icon-btn {
-    background-position: center;
-    background-size: 50%;
-    width: 50px;
-    height: 50px;
-    background-repeat: no-repeat;
-    border-radius: 50px;
-    border-width: 0;
-    background-color: var(--primary-lighter);
-}
-
-#connexion .icon-btn[name="register"] {
+#connexion .icon-btn[name="connect"] {
     display: block;
     margin: 10% auto;
     background-image: url(../Icons/checkmark.png);
     background-position: 10%;
     background-size: 20%;
+    background-repeat: no-repeat;
     font-size: 16px;
-    width: 70%;
+    width: fit-content;
     background-color: var(--valid-color);
     text-align: right;
-    padding-right: 10px;
+    border: none;
+    border-radius: 10px;
+    padding: 10px;
+    padding-left: 50px;
+    font-family: Prompt;
 }
 
 #connexion .field-alert {
     font-style: italic;
     color: red;
+}
+
+@media screen and (max-width: 900px) {
+
+    #connexion .info-form {
+        margin: 5% auto;
+        padding: 5%;
+        width: fit-content;
+    }
+
+    #connexion #btn-cont {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        width: 90%;
+        margin: auto;
+    }
+
+    #connexion .icon-btn {
+        background-position: center;
+        background-size: 50%;
+        width: 50px;
+        height: 50px;
+        background-repeat: no-repeat;
+        border-radius: 50px;
+        border-width: 0;
+        background-color: var(--primary-lighter);
+    }
 }
