--- a/Libraries/Style/CSS/footer.css
+++ b/Libraries/Style/CSS/footer.css
@@ -65,6 +65,10 @@ footer #left-links button[name="deconnex"]{
     background-color: transparent;
 }
 
+footer .contact-us {
+    display: none;
+}
+
 
 @media screen and (min-width: 900px) {
     footer #burger-btn {
@@ -73,5 +77,9 @@ footer #left-links button[name="deconnex"]{
 
     footer #myLinks {
         display: none;
+    }
+
+    footer .contact-us {
+        display: flex;
     }
 }
