--- a/Libraries/Style/CSS/adherer.css
+++ b/Libraries/Style/CSS/adherer.css
@@ -44,6 +44,22 @@
     transition: 0.5s transform;
 }
 
-#adhesion-card a:hover {
-    /* mettre une animation de hover */
+@media screen and (min-width: 900px) {
+
+    #adhesion-card {
+        width: 50%;
+    }
+    
+    #adhesion-card a {
+        display: block;
+        margin: 10% auto;
+        background-image: url(../Icons/crown.png);
+        background-position: 10%;
+        background-size: 20%;
+        font-size: 16px;
+        width: 50%;
+        background-color: var(gold);
+        text-align: right;
+        padding-right: 10px;
+    }
 }
