reglage des petit probléme

--- a/Libraries/Style/CSS/header.css
+++ b/Libraries/Style/CSS/header.css
@@ -35,6 +35,11 @@ textarea {
     resize: none;
 }
 
+.err-msg {
+    color: red;
+    text-align: center;
+}
+
 @media screen and (max-width: 900px) {
     
     header #myLinks a:not([href*="index.php"]) {
